ready for deployment on render

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+/* home page css */
+@media (max-width: 750px) and (min-width:100px) {
+    .bigBox {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .leftBox {
+        width: 100%;
+    }
+
+    .rightBox {
+        width: 100%;
+        flex-direction: row !important;
+        gap: 2px;
+    }
+
+    .imgBox1,
+    .imgBox2 {
+        width: 49%;
+        height: 30vw;
+    }
+
+    .iconn {
+        height: 6vw;
+        width: 6vw !important;
+    }
+
+}
