--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,12 @@
     }
 
 }
+
+@media (max-width: 430px) and (min-width:100px){
+    nav h1{
+        font-size: 4.2vw !important;
+    }
+    nav li{
+        font-size: 3.3vw;
+    }
+}
